--- a/2020-GS-ARTICLE.tex
+++ b/2020-GS-ARTICLE.tex
@@ -170,17 +170,17 @@ determinata gamma di frequenze. Applicando un generatore di funzioni al filtro
 otterremo una variazione continua delle frequenze selezionate. Questo
 procedimento, molto empirico, ha il pregio di creare una variazione continua
 dello spettro, cosa che è alla base della creazione dei suoni "sintetici".
-La frequenza di taglio è
-definita come la frequenza alla quale l’energia trasmessa dal filtro diminuisce
-di metà (-3 dB) rispetto alla massima energia trasmessa dalla banda passante.
-Essendo un filtro di tipo digitale, la Fc o Fcut è data dalla media aritmetica
-della frequenza di taglio superiore ed inferiore.
+La frequenza di taglio è definita come la frequenza alla quale l’energia
+trasmessa dal filtro diminuisce di metà (-3 dB) rispetto alla massima energia
+trasmessa dalla banda passante. Essendo un filtro di tipo digitale, la Fc o
+Fcut è data dalla media aritmetica della frequenza di taglio superiore ed
+inferiore.
 
 \subsection*{Fattore di merito Q}
 
-E' un parametro di smorzamento di un'oscillazione, ed è detto fattore di merito o
-di qualità perchè misura la qualità desiderata in un circuito accordato o in un
-risonatore
+E' un parametro di smorzamento di un'oscillazione, ed è detto fattore di merito
+o di qualità perchè misura la qualità desiderata in un circuito accordato o in
+un risonatore.
 
 \subsection*{Gain}
 
