--- a/includes/bibliography.bib
+++ b/includes/bibliography.bib
@@ -7,7 +7,7 @@
 
 @book{cr1996cmt,
   title	= {The computer music tutorial},
-  author = {Curtis ROADS},
+  author = {Curtis Roads},
   year = {1996},
   publisher	= {The MIT press}
 }
